<resources>
    <string name="app_name">Kids Canvas</string>
    <string name="image_small">image_small</string>
    <string name="image_medium">image_medium</string>
    <string name="image_large">image_large</string>
    <string name="ib_brush_desc">brush image</string>
    <string name="skin_color">Skin Color</string>
    <string name="black_color">Black Color</string>
    <string name="red_color">Red Color</string>
    <string name="green_color">Green Color</string>
    <string name="blue_color">Blue Color</string>
    <string name="yellow_color">Yellow Color</string>
    <string name="lollipop_color">Lollipop Color</string>
    <string name="purple_color">Purple Color</string>
    <string name="white_color">White Color</string>
    <string name="background_image">Background image</string>
    <string name="ib_gallery">Gallery image</string>
    <string name="undo_image">Undo image</string>
    <string name="ib_save_desc">Save image</string>
</resources>