<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <FrameLayout
            android:id="@+id/fl_drawing_view_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:background="@drawable/background_drawing_view_layout"
            android:padding="1dp"
            app:layout_constraintBottom_toTopOf="@+id/ll_paint_colors"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- Benefit: In FrameLayout the component which are added below are in foreground
                and added above are in Background.-->
            <!-- Order - Below: Background Image -->
            <!-- Removed: android:src="@drawable/image"  -->
            <ImageView
                android:id="@+id/iv_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/background_image"
                android:scaleType="centerCrop" />

            <!-- Order - Above: Drawing View -->
            <org.abubaker.kidscanvas.DrawingView
                android:id="@+id/drawing_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#80FFFFFF" />

        </FrameLayout>


        <!-- Color pallet_normal -->
        <LinearLayout
            android:id="@+id/ll_paint_colors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/ll_action_buttons"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fl_drawing_view_container">

            <!-- ID vs android:tag will help us identify which color was selected -->
            <!-- Color: Skin -->
            <ImageButton
                style="@style/colorSelector_dim"
                android:background="@color/skin"
                android:contentDescription="@string/skin_color"
                android:onClick="paintClicked"
                android:src="@drawable/pallet_normal"
                android:tag="@color/skin" />

            <!-- Color: Black -->
            <ImageButton
                style="@style/colorSelector_dim"
                android:background="@color/black"
                android:contentDescription="@string/black_color"
                android:onClick="paintClicked"
                android:src="@drawable/pallet_normal"
                android:tag="@color/black" />

            <!-- Color: Red -->
            <ImageButton
                style="@style/colorSelector_dim"
                android:background="@color/red"
                android:contentDescription="@string/red_color"
                android:onClick="paintClicked"
                android:src="@drawable/pallet_normal"
                android:tag="@color/red" />

            <!-- Color: Green -->
            <ImageButton
                style="@style/colorSelector_dim"
                android:background="@color/green"
                android:contentDescription="@string/green_color"
                android:onClick="paintClicked"
                android:src="@drawable/pallet_normal"
                android:tag="@color/green" />

            <!-- Color: Blue -->
            <ImageButton
                style="@style/colorSelector_dim"
                android:background="@color/blue"
                android:contentDescription="@string/blue_color"
                android:onClick="paintClicked"
                android:src="@drawable/pallet_normal"
                android:tag="@color/blue" />

            <!-- Color: Yellow -->
            <ImageButton
                style="@style/colorSelector_dim"
                android:background="@color/yellow"
                android:contentDescription="@string/yellow_color"
                android:onClick="paintClicked"
                android:src="@drawable/pallet_normal"
                android:tag="@color/yellow" />

            <!-- Color: Lollipop -->
            <ImageButton
                style="@style/colorSelector_dim"
                android:background="@color/lollipop"
                android:contentDescription="@string/lollipop_color"
                android:onClick="paintClicked"
                android:src="@drawable/pallet_normal"
                android:tag="@color/lollipop" />

            <!-- Color: Purple -->
            <ImageButton
                style="@style/colorSelector_dim"
                android:background="@color/purple"
                android:contentDescription="@string/purple_color"
                android:onClick="paintClicked"
                android:src="@drawable/pallet_normal"
                android:tag="@color/purple" />

            <!-- Color: White -->
            <ImageButton
                style="@style/colorSelector_dim"
                android:background="@color/white"
                android:contentDescription="@string/white_color"
                android:onClick="paintClicked"
                android:src="@drawable/pallet_normal"
                android:tag="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_action_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <!-- Gallery -->
            <ImageButton
                android:id="@+id/ib_gallery"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/ib_gallery"
                android:scaleType="fitXY"
                android:src="@drawable/ic_gallery" />

            <!-- Undo -->
            <ImageButton
                android:id="@+id/ib_undo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/undo_image"
                android:scaleType="fitXY"
                android:src="@drawable/ic_undo" />

            <!-- Brush -->
            <ImageButton
                android:id="@+id/ib_brush"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/ib_brush_desc"
                android:scaleType="fitXY"
                android:src="@drawable/ic_brush" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>