<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="center"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/ib_small_brush"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_small"
            android:src="@drawable/small" />

        <ImageButton
            android:id="@+id/ib_medium_brush"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_medium"
            android:src="@drawable/medium" />

        <ImageButton
            android:id="@+id/ib_large_brush"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_large"
            android:src="@drawable/large" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>